bindings/bindings-swift/smpp_codec_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_smpp_codec_ffi_fn_clone_tags(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_smpp_codec_ffi_fn_free_tags(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_bind_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_bind_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_broadcast_sm_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_broadcast_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_cancel_broadcast_sm_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_cancel_broadcast_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_cancel_sm_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_cancel_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_data_sm(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_data_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_deliver_sm(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_delivery_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_enquire_link(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_enquire_link_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_generic_nack(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_outbind(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_query_broadcast_sm_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_query_broadcast_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_query_sm_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_query_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_replace_sm_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_replace_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_submit_multi_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_submit_multi_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_submit_sm_request(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_submit_sm_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_unbind(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_decode_unbind_response(RustBuffer buffer, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_bind_request(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_bind_response(RustBuffer req, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_broadcast_sm_request(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_smpp_codec_ffi_fn_func_encode_broadcast_sm_response(RustBuffer response, RustCallStatus *_Nonnull out_status
);