bindings/bindings-python/smpp_codec_ffi.py


_UniffiLib = _uniffi_load_indirect()
_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_int8,
)
_UNIFFI_FOREIGN_FUTURE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiForeignFuture(ctypes.Structure):
    _fields_ = [
        ("handle", ctypes.c_uint64),
        ("free", _UNIFFI_FOREIGN_FUTURE_FREE),
    ]
class _UniffiForeignFutureStructU8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU8,
)
class _UniffiForeignFutureStructI8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI8,
)
class _UniffiForeignFutureStructU16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU16,
)
class _UniffiForeignFutureStructI16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI16,
)
class _UniffiForeignFutureStructU32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU32,
)
class _UniffiForeignFutureStructI32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI32,
)
class _UniffiForeignFutureStructU64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU64,
)
class _UniffiForeignFutureStructI64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI64,
)
class _UniffiForeignFutureStructF32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_float),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF32,
)
class _UniffiForeignFutureStructF64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_double),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF64,
)
class _UniffiForeignFutureStructPointer(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_void_p),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_POINTER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructPointer,
)
class _UniffiForeignFutureStructRustBuffer(ctypes.Structure):
    _fields_ = [
        ("return_value", _UniffiRustBuffer),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_RUST_BUFFER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructRustBuffer,
)
class _UniffiForeignFutureStructVoid(ctypes.Structure):
    _fields_ = [
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_VOID = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructVoid,
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_clone_tags.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_clone_tags.restype = ctypes.c_void_p
_UniffiLib.uniffi_smpp_codec_ffi_fn_free_tags.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_free_tags.restype = None
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_bind_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_bind_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_bind_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_bind_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_broadcast_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_broadcast_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_broadcast_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_broadcast_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_broadcast_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_broadcast_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_broadcast_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_broadcast_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_cancel_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_data_sm.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_data_sm.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_data_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_data_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_deliver_sm.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_deliver_sm.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_delivery_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_delivery_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_enquire_link.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_enquire_link.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_enquire_link_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_enquire_link_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_generic_nack.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_generic_nack.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_outbind.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_outbind.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_broadcast_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_broadcast_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_broadcast_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_broadcast_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_query_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_replace_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_replace_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_replace_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_replace_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_multi_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_multi_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_multi_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_multi_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_sm_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_submit_sm_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_unbind.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_unbind.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_unbind_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_decode_unbind_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_bind_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_bind_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_bind_response.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_bind_response.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_broadcast_sm_request.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_broadcast_sm_request.restype = _UniffiRustBuffer
_UniffiLib.uniffi_smpp_codec_ffi_fn_func_encode_broadcast_sm_response.argtypes = (
    _UniffiRustBuffer,
